--- a/learning/mod2/form.html
+++ b/learning/mod2/form.html
@@ -28,6 +28,7 @@
                     </div>
                     <div class="control action">
                         <input type="submit" value="submit" />
+                        <input type="button" id="kirim" value="tempat lain">
                         <input type="reset" value="reset" />
                     </div>
                 </form>
